# parse_mdl2_glyph

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
data/: mdl2_codepoints.html  segoe_codepoints.html
examples/: test_segoe_mdl2.rs
src/: lib.rs  main.rs
