[package]
name = "parse_segoe_mdl2"
version = "0.1.0"
authors = ["Ralf Zerres <ralf.zerres@networkx.de>"]
edition = "2018"

[dependencies]
# cssparser = { version = "0.27.2" }
# html5ever = { version = "*" }
# kuchiki = {version = "0.3.1", features = ["hyper"]}
kuchiki = {version = "0.3.1"}
# rcdom = { package = "markup5ever_rcdom", version = "0.1.0" }
